# pyzcc

./: .editorconfig  README.md  example.py  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
pyzcc/: __init__.py  discover.py  exceptions.py  zcc.py
tests/: test_discover.py  test_pyzcc.py  test_zcc.py
